@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts" meta_type="JavaScripts Registry">
+
+    <javascript id="++theme++plonetheme.teamraum/js/livesearch.js" enabled="false" />
+
+    <javascript cacheable="True" compression="safe" cookable="True" enabled="on"
+                expression="" id="++resource++opengever.base/livesearch.js"
+                inline="False"/>
+
+</object>
